<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0F7FA"
    android:textAlignment="textEnd"
    tools:context=".GameScreen">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/je"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <EditText
        android:id="@+id/input1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="First Person Singular"
        android:hint="@string/first_person_singular"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintLeft_toLeftOf="@id/text1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text1"
        app:layout_constraintVertical_bias="0.072" />

    <EditText
        android:id="@+id/input2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Second Person Singular"
        android:hint="@string/second_person_singular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintLeft_toLeftOf="@id/text2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text1"
        app:layout_constraintVertical_bias="0.049"
        android:inputType="text"/>

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/il_elle_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text2"
        app:layout_constraintVertical_bias="0.092" />

    <EditText
        android:id="@+id/input3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Third Person Singular"
        android:hint="@string/third_person_singular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintLeft_toLeftOf="@id/text3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text2"
        app:layout_constraintVertical_bias="0.067"
        android:inputType="text"/>

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text3"
        app:layout_constraintVertical_bias="0.092" />

    <EditText
        android:id="@+id/input4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="First Person Plural"
        android:hint="@string/first_person_plural"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintLeft_toLeftOf="@id/text4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text3"
        app:layout_constraintVertical_bias="0.075"
        android:inputType="text"/>

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text4"
        app:layout_constraintVertical_bias="0.112" />

    <EditText
        android:id="@+id/input5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Second Person Plural"
        android:hint="@string/second_person_plural"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintLeft_toLeftOf="@id/text5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text4"
        app:layout_constraintVertical_bias="0.096"
        android:inputType="text"/>

    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ils_elles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text5"
        app:layout_constraintVertical_bias="0.148" />

    <EditText
        android:id="@+id/input6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Third Person Plural"
        android:hint="@string/third_person_plural"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.331"
        app:layout_constraintLeft_toLeftOf="@id/text6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text5"
        app:layout_constraintVertical_bias="0.119"
        android:inputType="text" />

    <Button
        android:id="@+id/buttonCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_newscreen_default"
        android:text="@string/learn_more"
        android:textAlignment="textStart"
        android:textSize="8sp"
        app:backgroundTint="@color/frenchBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintLeft_toLeftOf="@id/note"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/note"
        app:layout_constraintVertical_bias="0.512" />

    <Button
        android:id="@+id/buttonCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/frenchRed"
        android:text="@string/check"
        android:textColor="@color/black"
        app:backgroundTint="@color/frenchRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/text6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text5"
        app:layout_constraintVertical_bias="0.236" />

    <TextView
        android:id="@+id/verbName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ready"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/text1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/frenchBlue"
        android:text="@string/start"
        android:textColor="@color/black"
        app:backgroundTint="@color/frenchBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintLeft_toLeftOf="@id/text6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text5"
        app:layout_constraintVertical_bias="0.236" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/next"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintLeft_toLeftOf="@id/text6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text5"
        app:layout_constraintVertical_bias="0.236" />

    <TextView
        android:id="@+id/note"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/text6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text5"
        app:layout_constraintVertical_bias="0.598" />

    <TextView
        android:id="@+id/scoreTitle"
        android:layout_width="82dp"
        android:layout_height="52dp"
        android:text="@string/score"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintLeft_toLeftOf="@id/text6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text5"
        app:layout_constraintVertical_bias="0.41" />

    <TextView
        android:id="@+id/score"
        android:layout_width="79dp"
        android:layout_height="48dp"
        android:text="@string/_0"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintLeft_toLeftOf="@id/text6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text5"
        app:layout_constraintVertical_bias="0.406" />

    <TextView
        android:id="@+id/time"
        android:layout_width="113dp"
        android:layout_height="72dp"
        android:text="@string/_100"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/text1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_backscreen_default"
        android:backgroundTint="@color/frenchRed"
        android:text="       Home Screen"
        android:textAlignment="textStart"
        android:textSize="8sp"
        app:backgroundTint="@color/frenchRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintLeft_toLeftOf="@id/note"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/note"
        app:layout_constraintVertical_bias="0.519" />
</androidx.constraintlayout.widget.ConstraintLayout>