<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCF3F8"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/conjugation"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />


    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="146dp"
        android:layout_height="149dp"
        android:background="@drawable/button_startscreen_default"
        android:text="@string/play"
        android:textColor="@color/black"

        app:backgroundTint="@color/black"
        app:backgroundTintMode="screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <Button
        android:id="@+id/buttonER"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/er_verbs_title"
        android:textColor="@color/black"

        app:backgroundTint="@color/frenchRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonPlay"
        app:layout_constraintVertical_bias="0.512" />

    <Button
        android:id="@+id/buttonIR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ir_verbs_title"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonPlay"
        app:layout_constraintVertical_bias="0.512" />

    <Button
        android:id="@+id/buttonRE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reverbs_title"
        android:textColor="@color/black"

        app:backgroundTint="@color/frenchBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonPlay"
        app:layout_constraintVertical_bias="0.512" />

    <Button
        android:id="@+id/buttonHard"
        android:layout_width="155dp"
        android:layout_height="123dp"
        android:background="@drawable/ic_baseline_star"
        android:text="@string/super_hard_verbs"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonPlay"
        app:layout_constraintVertical_bias="0.76" />

    <TextView
        android:id="@+id/textConfirm"
        android:layout_width="261dp"
        android:layout_height="47dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonHard"
        app:layout_constraintVertical_bias="0.76" />


</androidx.constraintlayout.widget.ConstraintLayout>