<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCF3F8"
    tools:context=".ContActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/let_s_learn"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:id="@+id/thisTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />


    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_backscreen_default"
        android:backgroundTint="@color/frenchBlue"
        android:text="        Home Screen"
        android:textAlignment="textStart"
        android:textSize="8sp"
        app:backgroundTint="@color/frenchBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/buttonConj"
        android:layout_width="146dp"
        android:layout_height="149dp"
        android:background="@drawable/new_button_default"
        android:text="@string/what_is_conjugation"
        android:textColor="@color/black"

        app:backgroundTint="@color/black"
        app:backgroundTintMode="screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/thisTitle"
        app:layout_constraintVertical_bias="0.164" />

    <TextView
        android:id="@+id/conjNote"
        android:layout_width="261dp"
        android:layout_height="47dp"
        android:layout_marginBottom="376dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TableLayout
        android:layout_width="375dp"
        android:layout_height="186dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#5ABAC6"
            android:padding="10dp">

            <Button
                android:id="@+id/erButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/er_verbs_title"
                app:backgroundTint="#939DA1" />

            <Button
                android:id="@+id/reButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reverbs_title"
                app:backgroundTint="#DAD6D6" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#5ABAC6"
            android:padding="10dp">

            <Button
                android:id="@+id/irButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ir_verbs_title"
                app:backgroundTint="#DAD6D6" />

            <Button
                android:id="@+id/iregButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/irreg_verbs"
                app:backgroundTint="#939DA1" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/verbNote"
        android:layout_width="365dp"
        android:layout_height="154dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />


</androidx.constraintlayout.widget.ConstraintLayout>